--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
-
+	<h1>NBA Finals Ticket Giveaway</h1>
+	<h2>Enter your info below to win 2 tickets</h2>
 </body>
 </html>
