--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
 <body>
 	<h1>NBA Finals Ticket Giveaway</h1>
 	<h2>Enter your info below to win 2 tickets</h2>
+	
+	<form action="null" method="post"> autocomplete="on">
+		<div class="input">
+			<p><label>First Name: <input type="text" name="first_name_field"></label></p>
+			<p><label>Last Name: <input type="text" name="last_name_field"></label></p>
+			<input type="Fname" class="input" id="first_name" placeholder="John" required>
+			<input type="Lname" class="input" id="last_name" placeholder="Doe" required>
+		</div>
+
+
 </body>
 </html>
