--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 	<h1>NBA Finals Ticket Giveaway</h1>
 	<h2>Enter your info below to win 2 tickets</h2>
 	
-	<form action="null" method="post"> autocomplete="on">
+	<form action="null" method="post" autocomplete="on">
 		<div class="input">
-			<p><label>First Name: <input type="text" name="first_name_field"></label></p>
-			<p><label>Last Name: <input type="text" name="last_name_field"></label></p>
-			<input type="Fname" class="input" id="first_name" placeholder="John" required>
-			<input type="Lname" class="input" id="last_name" placeholder="Doe" required>
+			<p><label>First Name:</label></p>
+			<p><label>Last Name: </label></p>
+			<input type="fname" class="input" id="first_name" placeholder="John" required>
+			<input type="lname" class="input" id="last_name" placeholder="Doe" required>
 		</div>
-
+		
+		<div class="input">
+			<p><label>Phone Number:</label></p>
+			<input type="number" class="input" id="phone_number" placeholder="1-xxx-xxx-xxxx" required>
+		</div>
+		
+		
 
 </body>
 </html>
