--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
 			<input type="number" class="input" id="phone_number" placeholder="1-xxx-xxx-xxxx" required>
 		</div>
 		
+		<div class="input">
+			<p><label>Birthday:</label></p>
+			<input type="birthday" class="input" id="birth_day" required>
+		</div>
 		
-
+		<div class="input">
+			<p><label>Email Address:</label></p>
+			<input type="email" class="input" id="e_mail" placeholder="JohnDoe@hawk.iit.edu" required>
+		</div>
+		
+		<div class="input">
+			<input type="submit" value="Send me in" id="submit_key">
+		</div>
+	</form>
 </body>
 </html>
