--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
 			<input type="submit" value="Send me in" id="submit_key">
 		</div>
 	</form>
+	
+	<h3>*Exclusions apply, must be over 18 to enter</h3>
 </body>
+
+
 </html>
