--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@
   <title> ITMD 362 Lab 2</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" media="screen" href="css\reset.css" />
+  <link rel="stylesheet" media="screen" href="css\screen.css" />
 </head>
 <body>
 	<h1>NBA Finals Ticket Giveaway</h1>
 	<h2>Enter your info below to win 2 tickets</h2>
 	
 	<form action="null" method="post" autocomplete="on">
-		<div class="input">
-			<p><label>First Name:</label></p>
-			<p><label>Last Name: </label></p>
-			<input type="fname" class="input" id="first_name" placeholder="John" required>
-			<input type="lname" class="input" id="last_name" placeholder="Doe" required>
-		</div>
 		
 		<div class="input">
 			<p><label>Phone Number:</label></p>
@@ -26,7 +20,7 @@
 		
 		<div class="input">
 			<p><label>Birthday:</label></p>
-			<input type="birthday" class="input" id="birth_day" required>
+			<input type="birthday" class="input" id="birth_day" placeholder="09/22/2020" required>
 		</div>
 		
 		<div class="input">
